# sha256_avalanche-effect

./: .gitignore  CMakeLists.txt  README.md
include/: string_functions.hpp
src/: main.cpp  string_functions.cpp
